--- a/Table App A spawner model.Rmd
+++ b/Table App A spawner model.Rmd
@@ -31,7 +31,9 @@ seltable = data.frame(
   Adj.R2="", 
   F="", 
   p.value="", 
-  AIC="", stringsAsFactors=FALSE)
+  AIC="",
+  LOOCV="",
+  stringsAsFactors=FALSE)
 
 #5 is most complex
 m5 = gam(spawners0 ~ spawners1+spawners2, data=respdat)
@@ -46,7 +48,9 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2="", 
   F="", p.value="", 
-  AIC=round(AIC(get(mod)), digits=2))
+  AIC=round(AIC(get(mod)), digits=2),
+  LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
+)
 seltable=rbind(seltable,tmp1)
 
 ## Space
@@ -57,7 +61,7 @@ tmp1 = data.frame(
   Adj.R2="",
   F="\\kern 1em",
   p.value="\\kern 1em", 
-  AIC="")
+  AIC="", LOOCV="")
 tmp2 = data.frame(
   Model=paste("Time dependency test A ", min(respdat$Year),"-", max(respdat$Year), " data", sep=""), 
   Residual.df="", 
@@ -65,7 +69,9 @@ tmp2 = data.frame(
   Adj.R2="",
   F="", 
   p.value="", 
-  AIC="")
+  AIC="",
+  LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
+)
 seltable=rbind(seltable,tmp1,tmp2)
 
 #5 is most complex
@@ -85,7 +91,9 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F="", p.value="", 
-  AIC=round(AIC(get(mod)), digits=2))
+  AIC=round(AIC(get(mod)), digits=2),
+  LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
+)
 seltable=rbind(seltable,tmp1)
 
 #linear ln N_t
@@ -97,7 +105,9 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2))
+  AIC=round(AIC(get(mod)), digits=2),
+  LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
+)
 seltable=rbind(seltable,tmp1)
 
 #linear ln Catch1 + ln Catch2
@@ -109,7 +119,9 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2))
+  AIC=round(AIC(get(mod)), digits=2),
+  LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
+)
 seltable=rbind(seltable,tmp1)
 
 ## Space
@@ -120,7 +132,7 @@ tmp1 = data.frame(
   Adj.R2="",
   F="\\kern 1em",
   p.value="\\kern 1em", 
-  AIC="")
+  AIC="", LOOCV="")
 tmp2 = data.frame(
   Model=paste("Time dependency test B ", min(respdat$Year),"-", max(respdat$Year), " data", sep=""), 
   Residual.df="", 
@@ -128,7 +140,7 @@ tmp2 = data.frame(
   Adj.R2="",
   F="", 
   p.value="", 
-  AIC="")
+  AIC="", LOOCV="")
 seltable=rbind(seltable,tmp1,tmp2)
 
 #5 is most complex
@@ -148,7 +160,9 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F="", p.value="", 
-  AIC=round(AIC(get(mod)), digits=2))
+  AIC=round(AIC(get(mod)), digits=2),
+  LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
+)
 seltable=rbind(seltable,tmp1)
 
 #linear ln N_t
@@ -160,7 +174,9 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2))
+  AIC=round(AIC(get(mod)), digits=2),
+  LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
+)
 seltable=rbind(seltable,tmp1)
 
 #linear ln Catch1 + ln Catch2
@@ -172,7 +188,9 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2))
+  AIC=round(AIC(get(mod)), digits=2),
+  LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
+)
 seltable=rbind(seltable,tmp1)
 
 ## Space
@@ -183,7 +201,7 @@ tmp1 = data.frame(
   Adj.R2="",
   F="\\kern 1em",
   p.value="\\kern 1em", 
-  AIC="")
+  AIC="", LOOCV="")
 tmp2 = data.frame(
   Model=paste("Time dependency test C ", min(respdat$Year),"-", max(respdat$Year), " data", sep=""), 
   Residual.df="", 
@@ -191,7 +209,7 @@ tmp2 = data.frame(
   Adj.R2="",
   F="", 
   p.value="", 
-  AIC="")
+  AIC="", LOOCV="")
 seltable=rbind(seltable,tmp1,tmp2)
 
 #5 is most complex
@@ -211,7 +229,9 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F="", p.value="", 
-  AIC=round(AIC(get(mod)), digits=2))
+  AIC=round(AIC(get(mod)), digits=2),
+  LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
+)
 seltable=rbind(seltable,tmp1)
 
 #linear ln N_t
@@ -223,7 +243,9 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2))
+  AIC=round(AIC(get(mod)), digits=2),
+  LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
+)
 seltable=rbind(seltable,tmp1)
 
 #linear ln N1 + ln S1
@@ -235,7 +257,9 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2))
+  AIC=round(AIC(get(mod)), digits=2),
+  LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
+)
 seltable=rbind(seltable,tmp1)
 
 #5 is most complex
@@ -255,17 +279,19 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2))
+  AIC=round(AIC(get(mod)), digits=2),
+  LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
+)
 seltable=rbind(seltable,tmp1)
 ```
 
 ```{r print-tableA1a, echo=FALSE}
-colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC")
-if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC")
+colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC", "LOOCV")
+if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC", "LOOCV")
 
 thecap=paste("Model selection tests of time-dependency the log catch during spawning months using F-tests of nested linear models.  $S_t$ is the catch during the spawning period (Jul-Sep). $N_t$ is the catch during the non-spawning period (Oct-Jun). $S_{t-1}$ and $N_{t-1}$ are the catch during the prior season during and after the spawning period respectively. $S_{t-2}$ and $N_{t-2}$ are the same for two seasons prior.  Test A uses catch during the spawning period as the explanatory variable.  Test B uses catch during the non-spawning period as the explanatory variable.  The numbers in front of the model equation indicate the level of nestedness. For Test C, there are two nested model sets, each with a different model 3.  The Naive model is a model that uses the previous data point in the time series as the prediction; thus the Naive model has no estimated parameters.")
 fullcap=paste("Table ", ref("tabappA:spawner-model-linear", pre="A"), ". ", thecap, sep="")
-kable(seltable, align="lcccccc", caption=fullcap, escape=FALSE)
+kable(seltable, align="lccccccc", caption=fullcap, escape=FALSE)
 ```
 
 ```{r, results="asis", echo=FALSE}
@@ -282,7 +308,7 @@ seltable = data.frame(
   Adj.R2="", 
   F="", 
   p.value="", 
-  AIC="", stringsAsFactors=FALSE)
+  AIC="", LOOCV="", stringsAsFactors=FALSE)
 
 #5 is most complex
 m5 = gam(spawners0 ~ spawners1+spawners2, data=respdat)
@@ -301,7 +327,9 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F="", p.value="", 
-  AIC=round(AIC(get(mod)), digits=2))
+  AIC=round(AIC(get(mod)), digits=2),
+  LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
+)
 seltable=rbind(seltable,tmp1)
 
 #linear ln N_t
@@ -313,7 +341,9 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2))
+  AIC=round(AIC(get(mod)), digits=2),
+  LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
+)
 seltable=rbind(seltable,tmp1)
 
 #linear ln Catch1 + ln Catch2
@@ -325,7 +355,9 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2))
+  AIC=round(AIC(get(mod)), digits=2),
+  LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
+)
 seltable=rbind(seltable,tmp1)
 
 ## Space
@@ -336,7 +368,7 @@ tmp1 = data.frame(
   Adj.R2="",
   F="\\kern 1em",
   p.value="\\kern 1em", 
-  AIC="")
+  AIC="", LOOCV="")
 tmp2 = data.frame(
   Model=paste("Time dependency test B ", min(respdat$Year),"-", max(respdat$Year), " data", sep=""), 
   Residual.df="", 
@@ -344,7 +376,7 @@ tmp2 = data.frame(
   Adj.R2="",
   F="", 
   p.value="", 
-  AIC="")
+  AIC="", LOOCV="")
 seltable=rbind(seltable,tmp1,tmp2)
 
 #5 is most complex
@@ -364,7 +396,9 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F="", p.value="", 
-  AIC=round(AIC(get(mod)), digits=2))
+  AIC=round(AIC(get(mod)), digits=2),
+  LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
+)
 seltable=rbind(seltable,tmp1)
 
 #linear ln N_t
@@ -376,7 +410,9 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2))
+  AIC=round(AIC(get(mod)), digits=2),
+  LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
+)
 seltable=rbind(seltable,tmp1)
 
 #linear ln Catch1 + ln Catch2
@@ -388,7 +424,9 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2))
+  AIC=round(AIC(get(mod)), digits=2),
+  LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
+)
 seltable=rbind(seltable,tmp1)
 
 ## Space
@@ -399,7 +437,7 @@ tmp1 = data.frame(
   Adj.R2="",
   F="\\kern 1em",
   p.value="\\kern 1em", 
-  AIC="")
+  AIC="", LOOCV="")
 tmp2 = data.frame(
   Model=paste("Time dependency test C ", min(respdat$Year),"-", max(respdat$Year), " data", sep=""), 
   Residual.df="", 
@@ -407,7 +445,7 @@ tmp2 = data.frame(
   Adj.R2="",
   F="", 
   p.value="", 
-  AIC="")
+  AIC="", LOOCV="")
 seltable=rbind(seltable,tmp1,tmp2)
 
 #5 is most complex
@@ -427,7 +465,9 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F="", p.value="", 
-  AIC=round(AIC(get(mod)), digits=2))
+  AIC=round(AIC(get(mod)), digits=2),
+  LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
+)
 seltable=rbind(seltable,tmp1)
 
 #nonlinear ln N1 + ln S1
@@ -439,7 +479,9 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2))
+  AIC=round(AIC(get(mod)), digits=2),
+  LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
+)
 seltable=rbind(seltable,tmp1)
 
 #5 is most complex
@@ -459,7 +501,9 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2))
+  AIC=round(AIC(get(mod)), digits=2),
+  LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
+)
 seltable=rbind(seltable,tmp1)
 
 load("FittedLooPred.Rdata")
@@ -471,7 +515,7 @@ tmp1 = data.frame(
   Adj.R2="",
   F="\\kern 1em",
   p.value="\\kern 1em", 
-  AIC="")
+  AIC="", LOOCV="")
 tmp2 = data.frame(
   Model=paste("Time varying test D ", min(respdat$Year),"-", max(respdat$Year), " data", sep=""), 
   Residual.df="", 
@@ -479,59 +523,71 @@ tmp2 = data.frame(
   Adj.R2="",
   F="", 
   p.value="", 
-  AIC="")
+  AIC="", LOOCV="")
 seltable=rbind(seltable,tmp1,tmp2)
 
 #DLM
 mod <- FittedLooPred1984$Fitted[["dlm(intercept)"]]
+err <- mod$model$data[1,]-fitted(mod, type="ytt1")
 tmp1=data.frame(
   Model="1. $ln(S_t)$ = $\\alpha_t$ + $\\epsilon_t$", 
-  Residual.df=attr(MARSS:::logLik.marssMLE(mod), "df"), 
+  Residual.df=mod$samp.size-attr(MARSS:::logLik.marssMLE(mod), "df"), 
   MASE=round(mean(abs(MARSS:::residuals.marssMLE(mod, silent=TRUE)$model.residuals), na.rm=TRUE)/NE,digits=3), 
   Adj.R2="", 
   F="", p.value="", 
-  AIC=round(mod$AIC, digits=2))
+  AIC=round(mod$AIC, digits=2),
+  LOOCV=round(sqrt(mean(err^2, na.rm=TRUE)), digits=3)
+)
 seltable=rbind(seltable,tmp1)
 
 mod <- FittedLooPred1984$Fitted[["dlm(intercept, slope)"]]
+err <- mod$model$data[1,]-fitted(mod, type="ytt1")
 tmp1=data.frame(
-  Model="2. $ln(S_t)$ = $\\alpha_t$ + $\beta_t t$ + $\\epsilon_t$", 
-  Residual.df=attr(MARSS:::logLik.marssMLE(mod), "df"), 
+  Model="2. $ln(S_t)$ = $\\alpha_t$ + $\\beta_t t$ + $\\epsilon_t$", 
+  Residual.df=mod$samp.size-attr(MARSS:::logLik.marssMLE(mod), "df"), 
   MASE=round(mean(abs(MARSS:::residuals.marssMLE(mod, silent=TRUE)$model.residuals), na.rm=TRUE)/NE,digits=3), 
   Adj.R2="", 
   F="", p.value="", 
-  AIC=round(mod$AIC, digits=2))
+  AIC=round(mod$AIC, digits=2),
+  LOOCV=round(sqrt(mean(err^2, na.rm=TRUE)), digits=3)
+)
 seltable=rbind(seltable,tmp1)
 
 mod <- FittedLooPred1984$Fitted[["dlm(Jul-Sep(t-1))"]]
+err <- mod$model$data[1,]-fitted(mod, type="ytt1")
 tmp1=data.frame(
-  Model="3. $ln(S_t)$ = $\\alpha_t$ + $\beta_t ln(S_{t-1})$ + $\\epsilon_t$", 
-  Residual.df=attr(MARSS:::logLik.marssMLE(mod), "df"), 
+  Model="3. $ln(S_t)$ = $\\alpha_t$ + $\\beta_t ln(S_{t-1})$ + $\\epsilon_t$", 
+  Residual.df=mod$samp.size-attr(MARSS:::logLik.marssMLE(mod), "df"), 
   MASE=round(mean(abs(MARSS:::residuals.marssMLE(mod, silent=TRUE)$model.residuals), na.rm=TRUE)/NE,digits=3), 
   Adj.R2="", 
   F="", p.value="", 
-  AIC=round(mod$AIC, digits=2))
+  AIC=round(mod$AIC, digits=2),
+  LOOCV=round(sqrt(mean(err^2, na.rm=TRUE)), digits=3)
+)
 seltable=rbind(seltable,tmp1)
 
 mod <- FittedLooPred1984$Fitted[["dlm(Oct-Mar(t-1))"]]
+err <- mod$model$data[1,]-fitted(mod, type="ytt1")
 tmp1=data.frame(
-  Model="3. $ln(S_t)$ = $\\alpha_t$ + $\beta_t ln(N_{t-1})$ + $\\epsilon_t$", 
-  Residual.df=attr(MARSS:::logLik.marssMLE(mod), "df"), 
+  Model="3. $ln(S_t)$ = $\\alpha_t$ + $\\beta_t ln(N_{t-1})$ + $\\epsilon_t$", 
+  Residual.df=mod$samp.size-attr(MARSS:::logLik.marssMLE(mod), "df"), 
   MASE=round(mean(abs(MARSS:::residuals.marssMLE(mod, silent=TRUE)$model.residuals), na.rm=TRUE)/NE,digits=3), 
   Adj.R2="", 
   F="", p.value="", 
-  AIC=round(mod$AIC, digits=2))
+  AIC=round(mod$AIC, digits=2),
+  LOOCV=round(sqrt(mean(err^2, na.rm=TRUE)), digits=3)
+)
 seltable=rbind(seltable,tmp1)
 
 ```
 
 ```{r print-tableA1b, echo=FALSE}
-colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC")
-if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC")
+colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC", "LOOCV")
+if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC", "LOOCV")
 
 thecap=paste0("Model selection tests of time-dependency the catch during spawning months using non-linear or time-varying linear responses instead of time-constant linear responses as in Table ",ref("tabappA:spawner-model-linear", pre="A"), ". See Table ",ref("tabappA:spawner-model-linear", pre="A"), " for an explanation of the parameters and model set-up.")
 fullcap=paste("Table ", ref("tabappA:spawner-model-nonlinear", pre="A"), ". ", thecap, sep="")
-kable(seltable, align="lcccccc", caption=fullcap, escape=FALSE)
+kable(seltable, align="lccccccc", caption=fullcap, escape=FALSE)
 ```
 
 ```{r, results="asis", echo=FALSE}
@@ -550,7 +606,7 @@ seltable = data.frame(
   Adj.R2="", 
   F="", 
   p.value="", 
-  AIC="", stringsAsFactors=FALSE)
+  AIC="", LOOCV="", stringsAsFactors=FALSE)
 
 #5 is most complex
 m5 = gam(spawners0 ~ spawners1+spawners2, data=respdat)
@@ -569,7 +625,9 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F="", p.value="", 
-  AIC=round(AIC(get(mod)), digits=2))
+  AIC=round(AIC(get(mod)), digits=2),
+  LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
+)
 seltable=rbind(seltable,tmp1)
 
 #linear ln N_t
@@ -581,7 +639,9 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2))
+  AIC=round(AIC(get(mod)), digits=2),
+  LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
+)
 seltable=rbind(seltable,tmp1)
 
 #linear ln Catch1 + ln Catch2
@@ -593,7 +653,9 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2))
+  AIC=round(AIC(get(mod)), digits=2),
+  LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
+)
 seltable=rbind(seltable,tmp1)
 
 ## Space
@@ -604,7 +666,7 @@ tmp1 = data.frame(
   Adj.R2="",
   F="\\kern 1em",
   p.value="\\kern 1em", 
-  AIC="")
+  AIC="", LOOCV="")
 tmp2 = data.frame(
   Model=paste("Time dependency test B ", min(respdat$Year),"-", max(respdat$Year), " data", sep=""), 
   Residual.df="", 
@@ -612,7 +674,7 @@ tmp2 = data.frame(
   Adj.R2="",
   F="", 
   p.value="", 
-  AIC="")
+  AIC="", LOOCV="")
 seltable=rbind(seltable,tmp1,tmp2)
 
 #5 is most complex
@@ -632,7 +694,9 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F="", p.value="", 
-  AIC=round(AIC(get(mod)), digits=2))
+  AIC=round(AIC(get(mod)), digits=2),
+  LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
+)
 seltable=rbind(seltable,tmp1)
 
 #linear ln N_t
@@ -644,7 +708,9 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2))
+  AIC=round(AIC(get(mod)), digits=2),
+  LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
+)
 seltable=rbind(seltable,tmp1)
 
 #linear ln Catch1 + ln Catch2
@@ -656,7 +722,9 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2))
+  AIC=round(AIC(get(mod)), digits=2),
+  LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
+)
 seltable=rbind(seltable,tmp1)
 
 ## Space
@@ -667,7 +735,7 @@ tmp1 = data.frame(
   Adj.R2="",
   F="\\kern 1em",
   p.value="\\kern 1em", 
-  AIC="")
+  AIC="", LOOCV="")
 tmp2 = data.frame(
   Model=paste("Time dependency test C ", min(respdat$Year),"-", max(respdat$Year), " data", sep=""), 
   Residual.df="", 
@@ -675,7 +743,7 @@ tmp2 = data.frame(
   Adj.R2="",
   F="", 
   p.value="", 
-  AIC="")
+  AIC="", LOOCV="")
 seltable=rbind(seltable,tmp1,tmp2)
 
 #5 is most complex
@@ -695,7 +763,9 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F="", p.value="", 
-  AIC=round(AIC(get(mod)), digits=2))
+  AIC=round(AIC(get(mod)), digits=2),
+  LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
+)
 seltable=rbind(seltable,tmp1)
 
 #nonlinear ln N1 + ln S1
@@ -707,7 +777,9 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2))
+  AIC=round(AIC(get(mod)), digits=2),
+  LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
+)
 seltable=rbind(seltable,tmp1)
 
 #5 is most complex
@@ -727,17 +799,19 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2))
+  AIC=round(AIC(get(mod)), digits=2),
+  LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
+)
 seltable=rbind(seltable,tmp1)
 ```
 
 ```{r print-tableA1c, echo=FALSE}
-colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC")
-if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC")
+colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC", "LOOCV")
+if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC", "LOOCV")
 
 thecap=paste0("Table ",ref("tabappA:spawner-model-nonlinear", pre="A"), " with 1956-",Yr1-1, " data instead of ", Yr1, " to ", Yr2, " data.  See Table ",ref("tabappA:spawner-model-linear", pre="A"), " for an explanation of the parameters and model set-up.")
 fullcap=paste("Table ", ref("tabappA:spawner-model-1956", pre="A"), ". ", thecap, sep="")
-kable(seltable, align="lcccccc", caption=fullcap, escape=FALSE)
+kable(seltable, align="lccccccc", caption=fullcap, escape=FALSE)
 ```
 
 
