--- a/Table App A spawner model.Rmd
+++ b/Table App A spawner model.Rmd
@@ -528,7 +528,8 @@ seltable=rbind(seltable,tmp1,tmp2)
 
 #DLM
 mod <- FittedLooPred1984$Fitted[["dlm(intercept)"]]
-err <- mod$model$data[1,]-fitted(mod, type="ytt1")
+modloo <- FittedLooPred1984$LooPred[["dlm(intercept)"]]
+err <- mod$model$data[1,]-modloo$pred.smooth
 tmp1=data.frame(
   Model="1. $ln(S_t)$ = $\\alpha_t$ + $\\epsilon_t$", 
   Residual.df=mod$samp.size-attr(MARSS:::logLik.marssMLE(mod), "df"), 
@@ -541,7 +542,8 @@ tmp1=data.frame(
 seltable=rbind(seltable,tmp1)
 
 mod <- FittedLooPred1984$Fitted[["dlm(intercept, slope)"]]
-err <- mod$model$data[1,]-fitted(mod, type="ytt1")
+modloo <- FittedLooPred1984$LooPred[["dlm(intercept, slope)"]]
+err <- mod$model$data[1,]-modloo$pred.smooth
 tmp1=data.frame(
   Model="2. $ln(S_t)$ = $\\alpha_t$ + $\\beta_t t$ + $\\epsilon_t$", 
   Residual.df=mod$samp.size-attr(MARSS:::logLik.marssMLE(mod), "df"), 
@@ -554,9 +556,10 @@ tmp1=data.frame(
 seltable=rbind(seltable,tmp1)
 
 mod <- FittedLooPred1984$Fitted[["dlm(Jul-Sep(t-1))"]]
-err <- mod$model$data[1,]-fitted(mod, type="ytt1")
+modloo <- FittedLooPred1984$LooPred[["dlm(Jul-Sep(t-1))"]]
+err <- mod$model$data[1,]-modloo$pred.smooth
 tmp1=data.frame(
-  Model="3. $ln(S_t)$ = $\\alpha_t$ + $\\beta_t ln(S_{t-1})$ + $\\epsilon_t$", 
+  Model="3. $ln(S_t)$ = $\\alpha$ + $\\beta_t ln(S_{t-1})$ + $\\epsilon_t$", 
   Residual.df=mod$samp.size-attr(MARSS:::logLik.marssMLE(mod), "df"), 
   MASE=round(mean(abs(MARSS:::residuals.marssMLE(mod, silent=TRUE)$model.residuals), na.rm=TRUE)/NE,digits=3), 
   Adj.R2="", 
@@ -567,9 +570,10 @@ tmp1=data.frame(
 seltable=rbind(seltable,tmp1)
 
 mod <- FittedLooPred1984$Fitted[["dlm(Oct-Mar(t-1))"]]
-err <- mod$model$data[1,]-fitted(mod, type="ytt1")
+modloo <- FittedLooPred1984$LooPred[["dlm(Oct-Mar(t-1))"]]
+err <- mod$model$data[1,]-modloo$pred.smooth
 tmp1=data.frame(
-  Model="3. $ln(S_t)$ = $\\alpha_t$ + $\\beta_t ln(N_{t-1})$ + $\\epsilon_t$", 
+  Model="3. $ln(S_t)$ = $\\alpha$ + $\\beta_t ln(N_{t-1})$ + $\\epsilon_t$", 
   Residual.df=mod$samp.size-attr(MARSS:::logLik.marssMLE(mod), "df"), 
   MASE=round(mean(abs(MARSS:::residuals.marssMLE(mod, silent=TRUE)$model.residuals), na.rm=TRUE)/NE,digits=3), 
   Adj.R2="", 
